# CAM_Forces

./: CMakeLists.txt  README.md  cmake_cython.cfg.in  myscript.sh  script.sh  setup.sh
cpp_examples/: CMakeLists.txt  cpp_example.cxx
cython/: cellular_automaton.cfg  cellular_automaton.pxd  cellular_automaton.pyx
import/CAM/: cmake.py  compile_prep.py  config.py  cpp.py  include.py  names.py
include/CAM/: building_units.hxx  cam_interface.hxx  cellular_automaton.hxx  composite.hxx  domain.hxx  evaluation.hxx  utils.hxx
python_examples/: cam.py  cam_eth.py
python_functions/: plot.py
saveData/: POMparticleInd_domain_1000.txt  POMparticleInd_domain_2500.txt  file_domain_1000.txt  particleInd_domain_1000.txt  particleInd_domain_2500.txt
saveData/domain_1000_por_0.35_texture_clay19_pxsize_5.0/: MineralParticleInd_position_domain_domain_1000_por_0.35_texture_clay19_pxsize_5.0.txt  POMParticleInd_position_domain_domain_1000_por_0.35_texture_clay19_pxsize_5.0.txt  file_domain_domain_1000_por_0.35_texture_clay19_pxsize_5.0.txt
saveData/domain_1000_por_0.5_texture_clay19_pxsize_5.0/: MineralParticleInd_position_domain_domain_1000_por_0.5_texture_clay19_pxsize_5.0.txt  POMParticleInd_position_domain_domain_1000_por_0.5_texture_clay19_pxsize_5.0.txt  file_domain_domain_1000_por_0.5_texture_clay19_pxsize_5.0.txt
saveData/domain_2500_por_0.35_texture_clay19_pxsize_2/: MineralParticleInd_position_domain_domain_2500_por_0.35_texture_clay19_pxsize_2.txt  POMParticleInd_position_domain_domain_2500_por_0.35_texture_clay19_pxsize_2.txt
